--- a/main.html
+++ b/main.html
@@ -8,7 +8,36 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div></div>
+	<header>
+		  <div class=header>
+			 <h1><b>Shaw's News</b></h1>
+         </div>
+	</header>
+	<div class=body-container>
+		
+		<div class=latest-news-section>
+		   <h3>Latest News Articles</h3>
+		   <ul>
+			  <li>Article 1</li>
+			  <li>Article 2</li>
+			  <li>Article 3</li>
+		  </ul>
+	   </div>
+	
+		<div class=main-news-section>
+			<h2>Main Article</h2>
+			<p>my name is khasimvali. I am 24 years old. I passed my bachlors in 2022 with specilazation in civil engineering.y name is khasimvali. I am 24 years old. I passed my bachlors in 2022 with specilazat.y name is khasimvali. I am 24 years old. I passed my bachlors in 2022 with specilazat </p>
+		</div>
+	
+		<div class=pictorial-news-section>
+			<h3>Pictorial News</h3>
+			<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg" alt="image">
+			<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/ADANI-INDIA-GAUTAM-ADANI-0_1675011651023_1675011651023_1675011672003_1675011672003.JPG" alt="image">
+            <img src="https://images.hindustantimes.com/img/2023/01/29/550x309/FRANCE-REFORM-PENSIONS-31_1675022359706_1675022359706_1675022383851_1675022383851.JPG" alt="image">
+			
+		</div>
+	
+</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
