--- a/main.html
+++ b/main.html
@@ -8,10 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<header>
-		  <div class=header>
+	<header class=header>
+		  
 			 <h1><b>Shaw's News</b></h1>
-         </div>
+        
 	</header>
 	<div class=body-container>
 		
